--- a/index.html
+++ b/index.html
@@ -126,5 +126,15 @@ Grammy Recognition: His raw and introspective lyrics, often reflecting his turbu
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63820.25855076126!2d36.6506088593586!3d-1.3158660990190698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1c809869d64b%3A0x199b5604a77f13f5!2sKaren%2C%20Nairobi!5e0!3m2!1sen!2ske!4v1705585273232!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
 </div>
+<table>
+  <tr>
+    <th>Phone Number</th>
+    <th> colspan="2" </th>
+  </tr>
+</table>
+
+
+
+
 </body>
 </html>
